# jetbot_ros2_mipt

./: 99-usb-jetbot-lidar-motor.rules  Dockerfile  README.md  docker-compose.yml
docker_configs/: Dockerfile_base  build_base_image_on_amd.sh
docker_configs/scripts/: filter_rosinstall.py  find_ros_packages.py  pure.rosinstall
general_scripts/: 99-usb-jetbot-lidar-motor.rules  create_udev_rules.sh
src/: default_camera.yaml
src/diffdrive_jetbot/: CMakeLists.txt  README.md  diffdrive_jetbot.xml  package.xml
src/diffdrive_jetbot/bringup/config/: diffbot_controllers.yaml
src/diffdrive_jetbot/bringup/launch/: diffbot.launch.py
src/diffdrive_jetbot/description/launch/: view_robot.launch.py
src/diffdrive_jetbot/description/meshes/: camera_link.STL  caster_ball_link.STL  left_wheel_link.STL  right_wheel_link.STL
src/diffdrive_jetbot/description/ros2_control/: diffbot.ros2_control.xacro
src/diffdrive_jetbot/description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro
src/diffdrive_jetbot/doc/: userdoc.rst
src/diffdrive_jetbot/hardware/: diffbot_system.cpp  pid_tune  pid_tune.cpp  plots.py  test_motor_comms  test_motor_comms.cpp
src/diffdrive_jetbot/hardware/include/diffdrive_jetbot/: diffbot_system.hpp  four_ch_motor_drive_comms.hpp  visibility_control.h  wheel.hpp
src/diffdrive_jetbot/tune_scripts/: pid_tune  pid_tune.cpp  pid_tuning_20250624_121403.csv  pid_tuning_20250624_121403_report.txt  plots.py  test_motor  test_motor_comms  test_motor_comms.cpp
src/jetbot_bringup/: package.xml  setup.cfg  setup.py
src/jetbot_bringup/config/: joy.yaml  nav2_default_params.yaml  nav2_params.yaml  slam_toolbox_online_async.yaml  twist_mux.yaml
src/jetbot_bringup/launch/: activate_all_drivers.launch.py  all_robot_launches.launch.py  localization.launch.py  mapping.launch.py  nav2_bringup.launch.py  navig.launch.py  rplidar.launch.py  slam_launch.launch.py
src/jetbot_bringup/maps/: map_maze_1.pgm  map_maze_1.yaml
